Fix source tree jumpiness (#3382)

--- a/src/components/PrimaryPanes/Sources.css
+++ b/src/components/PrimaryPanes/Sources.css
@@ -124,7 +124,6 @@
   border-top-color: transparent;
 }
 
-.source-footer .tab.active path,
-.source-footer .tab:hover path {
+.source-footer .tab.active path, .source-footer .tab:hover path {
   fill: var(--theme-body-color);
 }
